@@ -41,7 +41,6 @@
     <license>
       <name>Apache 2.0 License</name>
       <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-      <distribution>repo</distribution>
     </license>
   </licenses>
   <developers>
@@ -124,11 +123,11 @@
     <aircompressor.version>0.27</aircompressor.version>
     <reactor-netty-http.version>1.0.39</reactor-netty-http.version>
 
+    <!-- This is the same as the kubernetes-client version referenced in spark3.2.1 -->
+    <kubernetes-client.version>5.4.1</kubernetes-client.version>
     <!-- json -->
     <gson.version>2.8.9</gson.version>
     <jackson-bom.version>2.13.4.20221013</jackson-bom.version>
-    <!-- spark2.4 use 3.5.3, spark3.2 use 3.7.0-M11 -->
-    <json4s.version>3.5.3</json4s.version>
     <nebula.version>3.0.0</nebula.version>
     <jersey.version>1.19.4</jersey.version>
     <jersey.servlet.version>2.23.1</jersey.servlet.version>
@@ -142,7 +141,7 @@
     <reflections.version>0.9.12</reflections.version>
     <mybatis-plus.boot.starter.version>3.5.7</mybatis-plus.boot.starter.version>
     <mysql.connector.version>8.0.28</mysql.connector.version>
-    <druid.version>1.1.22</druid.version>
+    <druid.version>1.1.23</druid.version>
     <javassist.version>3.27.0-GA</javassist.version>
     <commons-collections.version>3.2.2</commons-collections.version>
     <commons-lang.version>2.6</commons-lang.version>
@@ -174,7 +173,7 @@
     <junit5.version>5.7.2</junit5.version>
     <mockito.version>3.9.0</mockito.version>
     <assertj.version>3.17.2</assertj.version>
-    <h2.version>1.4.200</h2.version>
+    <h2.version>2.2.220</h2.version>
 
     <!-- spring -->
     <spring-framework.version>5.3.34</spring-framework.version>
@@ -182,6 +181,8 @@
     <spring.boot.version>2.7.12</spring.boot.version>
     <spring-netflix.version>3.1.7</spring-netflix.version>
     <spring-cloud.version>2021.0.8</spring-cloud.version>
+    <spring-cloud-alibaba.version>2021.0.6.0</spring-cloud-alibaba.version>
+    <spring-cloud-common.version>3.1.7</spring-cloud-common.version>
     <spring.boot.admin.version>2.7.16</spring.boot.admin.version>
 
     <!-- platform encoding override -->
@@ -212,15 +213,35 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+    <maven-shade-plugin.version>3.3.0</maven-shade-plugin.version>
+    <maven-helper-plugin.version>3.2.0</maven-helper-plugin.version>
     <scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
     <spotless-maven-plugin.version>2.24.1</spotless-maven-plugin.version>
-    <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
+    <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
     <jacoco.skip>false</jacoco.skip>
+
+    <!-- for JDK-17 test-->
+    <extraJavaTestArgs>-XX:+IgnoreUnrecognizedVMOptions
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.net=ALL-UNNAMED
+      --add-opens=java.base/java.nio=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+      --add-opens=java.base/sun.security.action=ALL-UNNAMED
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+      -Djdk.reflect.useDirectMethodHandle=false</extraJavaTestArgs>
 
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <!-- linkis -->
       <dependency>
         <groupId>org.apache.linkis</groupId>
         <artifactId>linkis-module</artifactId>
@@ -236,13 +257,11 @@
           </exclusion>
         </exclusions>
       </dependency>
-
       <dependency>
         <groupId>org.apache.linkis</groupId>
         <artifactId>linkis-common</artifactId>
         <version>${project.version}</version>
       </dependency>
-
       <dependency>
         <groupId>org.apache.linkis</groupId>
         <artifactId>linkis-mybatis</artifactId>
@@ -403,32 +422,6 @@
         <version>${jackson-bom.version}</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.json4s</groupId>
-        <artifactId>json4s-core_${scala.binary.version}</artifactId>
-        <version>${json4s.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.json4s</groupId>
-        <artifactId>json4s-jackson_${scala.binary.version}</artifactId>
-        <version>${json4s.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>*</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.json4s</groupId>
-        <artifactId>json4s-ast_${scala.binary.version}</artifactId>
-        <version>${json4s.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.json4s</groupId>
-        <artifactId>json4s-scalap_${scala.binary.version}</artifactId>
-        <version>${json4s.version}</version>
       </dependency>
 
       <dependency>
@@ -1497,7 +1490,6 @@
     <profile>
       <id>spark-3.2</id>
       <properties>
-        <json4s.version>3.7.0-M11</json4s.version>
         <spark.version>3.2.1</spark.version>
         <scala.version>2.12.15</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
